clusters/moo-cluster/flux-system/webhook-receiver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: yebyen-okd4
    control-plane: controller
  name: notification-webhook
  namespace: flux-system
spec:
  ports:
  - name: http
    port: 9292
    protocol: TCP
    targetPort: http-webhook
  selector:
    app: notification-controller
  type: ClusterIP
